the config file needs to return the contents

--- a/app/views/configuration_required.html
+++ b/app/views/configuration_required.html
@@ -8,4 +8,5 @@ It should contain the following:<br/>
 $config = array(<br/>
 'flickrApiKey' => '....',<br/>
 );<br/>
+return $config;
 ~template::include:footer.html~
