make keyword replacements template: instead of template:: and system: instead of system::

--- a/app/views/configuration_required.html
+++ b/app/views/configuration_required.html
@@ -1,4 +1,4 @@
-~template::include:header.html~
+~template:include:header.html~
 <h2>Some configuration is required</h2>
 It seems you're using this for the first time, a couple of things need to be done before it will be up and running.<br/>
 Create a directory and make sure the web server can write to it: cache/<br/>
@@ -9,4 +9,4 @@ $config = array(<br/>
 'flickrApiKey' => '....',<br/>
 );<br/>
 return $config;
-~template::include:footer.html~
+~template:include:footer.html~
