--- a/app/views/search/searchform.html
+++ b/app/views/search/searchform.html
@@ -1,7 +1,6 @@
-~template::include:header.html~
-<form method="get" action="~system::base:url~/search">
+<form method="get" action="~system:base:url~/search">
 	Enter your search term(s):&nbsp;
-	<input type="text" name="search" value="~search::search:term~" />&nbsp;
+	<input type="text" name="search" value="~search:search:term~" />&nbsp;
 	<input type="submit" value="Go"/>
 </form>
-~template::include:footer.html~
+
