--- a/app/views/uhoh.html
+++ b/app/views/uhoh.html
@@ -1,5 +1,5 @@
-~template::include:header.html~
+~template:include:header.html~
 <h2>Uhoh!</h2>
 Something has gone wrong, but don't worry - we know what's happened and we'll get it fixed as soon as possible.<br/>
 Check back shortly.
-~template::include:footer.html~
+~template:include:footer.html~
