update config required options

--- a/app/views/configuration_required.html
+++ b/app/views/configuration_required.html
@@ -7,6 +7,7 @@ It should contain the following:<br/>
 &lt;?php<br/>
 $config = array(<br/>
 'flickrApiKey' => '....',<br/>
+'perpage' => 5,
 );<br/>
 return $config;
 ~template:include:footer.html~
