--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,5 +1,6 @@
 <html>
 <head>
 <title>Flickr Search</title>
+<link rel="stylesheet" type="text/css" href="~system:base:weburl~/web/css/search.css" />
 <body>
 
