when you click inside the search box, highlight and focus it

--- a/app/views/search/searchform.html
+++ b/app/views/search/searchform.html
@@ -1,6 +1,6 @@
 <form method="get" action="~system:base:url~/search">
 	Enter your search term(s):&nbsp;
-	<input type="text" name="search" value="~search:search:term~" />&nbsp;
+	<input type="text" name="search" value="~search:search:term~" onFocus="this.select();" onClick="this.select();"/>&nbsp;
 	<input type="submit" value="Go"/>
 </form>
 
