image in the header

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -3,4 +3,4 @@
 <title>Flickr Search</title>
 <link rel="stylesheet" type="text/css" href="~system:base:weburl~/web/css/search.css" />
 <body>
-
+<img src="~system:base:weburl~/web/images/flickr-logo.png"><br/>
