--- a/app/views/configuration_required.html
+++ b/app/views/configuration_required.html
@@ -2,6 +2,6 @@
 <h2>Some configuration is required</h2>
 It seems you're using this for the first time, a couple of things need to be done before it will be up and running.<br/>
 ~template:foreach:configuration_required:errors:errors:begin~
-	~configuration_required:errors:errors:error~
+	- ~configuration_required:errors:errors:error~
 ~template:foreach:configuration_required:errors:errors:end~
 ~template:include:footer.html~
